Fix tweet text overflow issue

--- a/client/css/tweet.scss
+++ b/client/css/tweet.scss
@@ -10,11 +10,14 @@
 
 .tweet-text {
   color: black;
+  min-width: 0;
+  overflow-wrap: break-word;
   text-decoration: none; }
 
 .tweet-media {
   max-height: 100%;
   max-width: 60%;
+  min-width: 0;
   object-fit: contain; }
 
 .disabled {
